# non-rigid-tracking

./: .gitignore  cmake-jackbook2.sh
input/: contrast-thresholds.txt  distance-thresholds.txt
scripts/: combine-matches.sh  extract-descriptors-for-effect-of-sift-threshold.sh  extract-sift-all-frames.sh  extract-sift-tracks-all-frames.sh  filter-matches.sh  find-keypoints-all-frames.sh  find-keypoints-and-extract-descriptors-all-frames.sh  generate-exhaustive-pairs.sh  generate-ordered-image-pairs.sh  generate-unordered-image-pairs.sh  match-features-across-views-all-frames.sh  match-features-across-views-and-visualize-all-frames.sh  match-features-all-frames-all-views.sh  match-features-exhaustive.sh  match-features-for-effect-of-sift-threshold.sh  match-features-in-adjacent-frames.sh  match-features-using-classifiers.sh  match-features-varying-parameters.sh  match-features.sh  match-tracks-using-mean-exhaustive.sh  match-tracks-using-mean-helper.sh  match-tracks-using-min-exhaustive.sh  match-tracks-using-min-helper.sh  plot-effect-of-matching-parameters.sh  select-distinctive-matches-all-frames-all-views.sh  track-features-bidir-all-frames.sh  track-rigid-bidir-all-frames.sh  undistort-image-all-frames.sh  undistort-points-all-frames.sh  visualize-effect-of-sift-threshold.sh  visualize-keypoints-all-frames.sh  visualize-pca-descriptors-all-frames.sh  visualize-pca-descriptors.sh
src/: CMakeLists.common.txt  CMakeLists.jackbook2.txt  CMakeLists.palfrey.txt  CMakeLists.txt  adjacent_matches_to_tracks.cpp  admm_tracking.cpp  admm_tracking.hpp  agglomerative_cluster.cpp  axis_aligned_ellipse.cpp  axis_aligned_ellipse.hpp  camera.cpp  camera.hpp  camera_pose.cpp  camera_pose.hpp  camera_pose_reader.cpp  camera_pose_reader.hpp  camera_pose_writer.cpp  camera_pose_writer.hpp  camera_properties.cpp  camera_properties.hpp  camera_properties_reader.cpp  camera_properties_reader.hpp  camera_properties_writer.cpp  camera_properties_writer.hpp  camera_reader.cpp  camera_reader.hpp  camera_writer.cpp  camera_writer.hpp  cameras_to_fund_mat.cpp  choose_keypoints.cpp  choose_points.cpp  classifier.cpp  classifier.hpp  classifier.inl  classifier_reader.cpp  classifier_reader.hpp  classifier_writer.cpp  classifier_writer.hpp  cluster_descriptors.cpp  combine_matches.cpp  (+328 more)
src/tools/: CMakeLists.txt  select-foreground-tracks.cpp  using.hpp
src/tracking/: '  CMakeLists.txt  detect-and-track.cpp  flow.cpp  flow.hpp  similarity-warp.cpp  similarity-warp.hpp  similarity-warper.cpp  similarity-warper.hpp  track-features.cpp  track-list.cpp  track-list.hpp  track-list.inl  track-list.proto  translation-warp.cpp  translation-warp.hpp  translation-warper.cpp  translation-warper.hpp  using.hpp  visualize-tracks.cpp  warp.cpp  warp.hpp  warper.hpp
src/util/: CMakeLists.txt  cond.cpp  cond.hpp  hsv.cpp  is-finite.hpp  random-color.cpp  random-color.hpp  sqr.hpp
src/videoseg/: CMakeLists.txt  draw-region.cpp  draw-region.hpp  hierarchical-segmentation.cpp  hierarchical-segmentation.hpp  hierarchical-segmentation.proto  io.cpp  io.hpp  region.cpp  region.hpp  region.proto  segment-foreground.cpp  segmentation.cpp  segmentation.hpp  segmentation.inl  segmentation.proto  tree.cpp  tree.hpp  tree.inl  using.hpp  video-region.hpp  video-region.inl  visualize-foreground.cpp
